# blog

./: .gitignore  .gitlab-ci.yml  .travis.yml  404.html  CNAME  LICENSE  README.md  about.html  about.rst  atom.xml  blog.cabal  contact.html  contact.markdown  default.nix  home.html  home.markdown  index.html  notes.html  release.nix  rss.xml  site.hs  sitemap.xml  stack.yaml  subscribe.html  subscribe.markdown  travis-ci.enc
css/: default.css  syntax.css
downloads/: 2518EEB0-urbanslug-pub-key.asc  7D3A120D-urbanslug-pub-key.asc  f8d0cd03-urbanslug-key.asc
drafts/: 2016-02-14-Differences-between-men-and-women-(lessons-learned-from-freakonomics).md
notes/: 2018-04-17-logicomix.html  2018-04-17-logicomix.md  2018-04-24-react.md  2018-06-29-react.html  2018-06-29-react.md  2018-12-13-deep-work.html  2018-12-13-deep-work.md  2019-02-27-Statistics.html  2019-02-27-Statistics.md  2020-02-22-encrypted-flash-drive.html  2020-02-22-encrypted-flash-drive.md
posts/: 2014-03-05-How-to-apply-a-patch-quickly.html  2014-03-05-How-to-apply-a-patch-quickly.md  2014-03-05-ThreadScope-patch.html  2014-03-05-ThreadScope-patch.md  2014-03-11-my-public-key.html  2014-03-11-my-public-key.md  2014-03-18-Solar-Power-in-Africa.html  2014-03-18-Solar-Power-in-Africa.md  2014-03-22-Being-black-can-be-hard.md  2014-03-26-mail-at-urbanslug.html  2014-03-26-mail-at-urbanslug.md  2014-04-05-Man-in-the-Arena.html  2014-04-05-Man-in-the-Arena.md  2014-12-02-Pulseaudio-Mute-on-Boot.html  2014-12-02-Pulseaudio-Mute-on-Boot.md  2014-12-08-Back-to-Chess.html  2014-12-08-Back-to-Chess.md  (+57 more)
(+70 files in other folders)
