name:               blog
version:            0.1.0.0
build-type:         Simple
license:            GPL-3
cabal-version:      >= 1.10

executable blog
  main-is:          site.hs
  build-depends:    base >= 4.7 && < 5
                  , hakyll >= 4.8 && < 5
  ghc-options:      -threaded
  default-language: Haskell2010
